e2e/tests/snapshots/snm_test____test_context_wrapped_test_package_json_parse_err.snap
---
source: e2e/tests/snm_test.rs
expression: res
---
id: 1
is: snm i


stdout:
stderr:package_json::json_parse_failed (https://docs.rs/package_json_parser/0.0.7/package_json_parser/enum.ErrorKind.html#variant.JsonParseError)

  × JSON parsing failed
  ╰─▶ invalid type: string "true", expected a boolean at line 3 column 19
   ╭─[./tests/fixtures/package_json_parse_err/package.json:1:1]
 1 │ ╭─▶ {
 2 │ │     "packageManager": "pnpm@9.14.2",
 3 │ │     "private": "true"
   · │   ─────────┬─────────
   · │            ╰── here
 4 │ ╰─▶ }
   ╰────
  help: Please check the JSON syntax

Error: parse package.json failed, err: package_json::json_parse_failed (https://docs.rs/package_json_parser/0.0.7/package_json_parser/enum.ErrorKind.html#variant.JsonParseError)

  × JSON parsing failed
  ╰─▶ invalid type: string "true", expected a boolean at line 3 column 19
   ╭─[./tests/fixtures/package_json_parse_err/package.json:1:1]
 1 │ ╭─▶ {
 2 │ │     "packageManager": "pnpm@9.14.2",
 3 │ │     "private": "true"
   · │   ─────────┬─────────
   · │            ╰── here
 4 │ ╰─▶ }
   ╰────
  help: Please check the JSON syntax
status:1
