e2e/tests/snapshots/snm_test____test_context_wrapped_test_snm_install_node.snap
---
source: e2e/tests/snm_test.rs
expression: res
---
id: 1
is: snm node install 20.0.0


stdout:🎉 Node v20.0.0 is installed
stderr:


id: 2
is: snm node list --compact


stdout:20.0.0
stderr:
