e2e/tests/snapshots/snm_test____test_context_wrapped_test_snm_install_with_invalid_package_manager_version.snap
---
source: e2e/tests/snm_test.rs
expression: res
---
id: 1
is: snm i


stdout:
stderr:Error: Not found package manager: npm@100.0.0, please check your npm version
status:1
