e2e/tests/snapshots/snm_test____test_context_wrapped_test_snm_install_with_invalid_private_package_json.snap
---
source: e2e/tests/snm_test.rs
expression: res
---
id: 1
is: snm i


stdout:
stderr:package_json::json_parse_failed (https://docs.rs/package_json_parser/0.0.7/package_json_parser/enum.ErrorKind.html#variant.JsonParseError)

  × JSON parsing failed
  ╰─▶ invalid type: string "true", expected a boolean at line 5 column 18
   ╭─[./tests/fixtures/invalid_package_json/package.json:1:1]
 1 │ ╭─▶ {
 2 │ │     "name": "snm_i",
 3 │ │     "version": "1.0.0",
 4 │ │     "packageManager": "pnpm@9.0.0",
 5 │ │     "private":"true",
   · │   ─────────┬─────────
   · │            ╰── here
 6 │ │     "dependencies": {
 7 │ │       "react": "18.3.1"
 8 │ │     }
 9 │ ╰─▶ }
   ╰────
  help: Please check the JSON syntax

Error: parse package.json failed, err: package_json::json_parse_failed (https://docs.rs/package_json_parser/0.0.7/package_json_parser/enum.ErrorKind.html#variant.JsonParseError)

  × JSON parsing failed
  ╰─▶ invalid type: string "true", expected a boolean at line 5 column 18
   ╭─[./tests/fixtures/invalid_package_json/package.json:1:1]
 1 │ ╭─▶ {
 2 │ │     "name": "snm_i",
 3 │ │     "version": "1.0.0",
 4 │ │     "packageManager": "pnpm@9.0.0",
 5 │ │     "private":"true",
   · │   ─────────┬─────────
   · │            ╰── here
 6 │ │     "dependencies": {
 7 │ │       "react": "18.3.1"
 8 │ │     }
 9 │ ╰─▶ }
   ╰────
  help: Please check the JSON syntax
status:1
