e2e/tests/snapshots/snm_test____test_context_wrapped_test_snm_install_with_node_20_npm.snap
---
source: e2e/tests/snm_test.rs
expression: res
---
id: 1
is: snm node install 20.0.0


stdout:🎉 Node v20.0.0 is installed
stderr:


id: 2
is: snm node default 20.0.0


stdout:🎉 Node v20.0.0 is now default
stderr:


id: 3
is: npm -v


stdout:9.6.4
stderr:


id: 4
is: which npm


stdout:/Users/ityuany/GitRepository/snm/target/debug/npm
stderr:


id: 5
is: npm install


stdout:up to date, audited 4 packages in 519ms

found 0 vulnerabilities
stderr:


id: 6
is: node index.cjs


stdout:18.3.1
stderr:
