e2e/tests/snapshots/snm_test____test_context_wrapped_test_snm_whoami.snap
---
source: e2e/tests/snm_test.rs
expression: res
---
id: 1
is: snm whoami


stdout:npm@9.0.0
stderr:
status:0
